# technical-documentation-service

./: README.md  app.py  database.py  deps.txt  docker-compose.yml  pyproject.toml  resources.py  techarchive.spec
assets/: make_icon.py
database/: init.sql
models/: item.py  parent_child.py
repository/: item_repository.py  parent_child_repository.py
service/: gost_parser.py  ocr_service.py
ui/: item_form_dialog.py  main_window.py  parent_child_dialog.py  pdf_viewer_dialog.py  product_graph_widget.py  product_tree_widget.py  workers.py
